RESOLVED FIXED81744
Web audio layout test failed in debug with an ASSERT error in ReverbConvolverStage.cpp
https://bugs.webkit.org/show_bug.cgi?id=81744
Summary Web audio layout test failed in debug with an ASSERT error in ReverbConvolver...
Xingnan Wang
Reported 2012-03-20 23:54:06 PDT
Error msg: ASSERTION FAILED: totalDelay >= halfSize third_party/WebKit/Source/WebCore/platform/audio/ReverbConvolverStage.cpp(73) : WebCore::ReverbConvolverStage::ReverbConvolverStage(const float*, size_t, size_t, size_t, size_t, size_t, size_t, size_t, WebCore::ReverbAccumulationBuffer*, bool)
Attachments
Patch (1.79 KB, patch)
2012-03-20 23:57 PDT, Xingnan Wang
no flags
Xingnan Wang
Comment 1 2012-03-20 23:57:12 PDT
Xingnan Wang
Comment 2 2012-03-20 23:58:25 PDT
(In reply to comment #1) > Created an attachment (id=132981) [details] > Patch Uploaded the patch.
WebKit Review Bot
Comment 3 2012-03-21 12:07:09 PDT
Comment on attachment 132981 [details] Patch Clearing flags on attachment: 132981 Committed r111590: <http://trac.webkit.org/changeset/111590>
WebKit Review Bot
Comment 4 2012-03-21 12:07:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.