Web audio layout test failed in debug with an ASSERT error in ReverbConvolverStage.cpp https://bugs.webkit.org/show_bug.cgi?id=81744

Patch by Xingnan Wang <xingnan.wang@intel.com> on 2012-03-21
Reviewed by Chris Rogers.

* platform/audio/ReverbConvolverStage.cpp:
(WebCore::ReverbConvolverStage::ReverbConvolverStage):

Canonical link: https://commits.webkit.org/99093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111590 268f45cc-cd09-0410-ab3c-d52691b4dbfc